# docmanager-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
load_testing/: script.js
migrations/: 20211230203418_${0}.sql
rest/: reqs.http
src/: health.rs  main.rs
src/model/: user.rs
src/persistence/: memory_repository.rs  mod.rs  postgres_repository.rs  repository.rs
src/v1/: mod.rs  user_services.rs
