[package]
authors = ["Alvaro Tolentino <alvarotolentinou@gmail.com>"]
edition = "2021"
name = "docmanager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
actix-web = "3.3.3"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "time", "json"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
sqlx = {version="0.4.2", features=["runtime-tokio-rustls", "postgres", "uuid", "chrono"]}
jemallocator = "0.3.0"

[dev-dependencies]
actix-rt = "2.4.0"
mockall = "0.11.0"
